--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ document.querySelectorAll('h1').forEach(h1 => {
 -->
 <ul id="nav">
 	<li class="nav-link">
-		<a href="main/daftar.html">Daftar</a>
+		<h1 data-name="Daftar" id="Daftar">Daftar</h1>
 	</li>
 	<li class="nav-link">
 		<h1 data-name="Pinjam" id="Pinjam">Pinjam</h1>
