--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Split animation on hover with single element</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'>
-	<link rel="stylesheet" href="https://DEADPOOL1018.gihub.io/Puko/css/style.css">
+	<link rel="stylesheet" href="https://DEADPOOL1018.github.io/Puko/css/style.css">
 
 </head>
 <script>
