--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Split animation on hover with single element</title>
-  <link rel='stylesheet' href='/css/style.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'>
 	<!--<link rel="stylesheet" href="https://DEADPOOL1018.github.io/Puko/css/style.css">-->
 
 </head>
