--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ document.querySelectorAll('h1').forEach(h1 => {
 </aside>
 <!-- ------------ -->
 <!-- partial -->
+	<div>
+		<img src="/img/1.jpg">
+	</div>
+		
   <script src="js/index.js"></script>
 </body>
 </html>
